[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/press_start/prstartk.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="Settings" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -289.5
margin_right = 289.5
margin_bottom = 592.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.333333, 0.427451, 0.705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="."]
margin_right = 577.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 32.0
margin_right = 256.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volumes" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 160.0
margin_right = 560.0
margin_bottom = 480.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Master" type="Label" parent="Volumes"]
margin_right = 544.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
text = "MASTER VOLUME"

[node name="MasterSlider" type="HSlider" parent="Volumes/Master"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -32.0
margin_right = 272.0
margin_bottom = -16.0
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="Volumes"]
margin_top = 110.0
margin_right = 544.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
text = "MUSIC VOLUME"

[node name="MusicSlider" type="HSlider" parent="Volumes/Music"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -32.0
margin_right = 272.0
margin_bottom = -16.0
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sfx" type="Label" parent="Volumes"]
margin_top = 220.0
margin_right = 544.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
text = "SFX VOLUME"

[node name="SfxSlider" type="HSlider" parent="Volumes/Sfx"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -32.0
margin_right = 272.0
margin_bottom = -16.0
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleCRT" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.9897
margin_top = -88.6869
margin_right = 211.99
margin_bottom = -27.6869
custom_fonts/font = SubResource( 2 )
text = "CRT MODE"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRTCheckBox" type="CheckBox" parent="ToggleCRT"]
margin_left = 124.694
margin_top = -7.09268
margin_right = 148.694
margin_bottom = 16.9073
rect_scale = Vector2( 3, 3 )
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -96.0
margin_right = -36.0
margin_bottom = -26.0
custom_fonts/font = SubResource( 3 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Volumes/Master/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Volumes/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Volumes/Sfx/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="toggled" from="ToggleCRT/CRTCheckBox" to="." method="_on_CRTCheckBox_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
